methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:43: error: expected class or object definition
def monterLigne(){
^PatternPicture:54: error: Unmatched closing brace '}' ignored here
}
^